test/pos/gfp00.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Pos ((v Int)) (<= 0 v))
(qualif Neg ((v Int)) (<= v 0))
(qualif NeqZ ((v Int)) (not (= 0 v)))
(qualif False ((v Int)) (= 66 77))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v0##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)) (=> ($k0 _VV##1) (< 0 (+ _VV##1 1)))))
(constraint (forall ((_VV##2 Int)) (=> (= _VV##2 10) ($k0 _VV##2))))

