test/neg/elim-dep-00.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif False ((v Int)) (= 0 1))
(qualif Zero ((v Int)) (= 0 v))
(qualif One ((v Int)) (= 1 v))

; Well-formedness Constraints
(wf $k2 ((lq_karg$v##k2 Int)))
(wf $k1 ((lq_karg$v##k1 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)) (=> (= _VV##1 0) ($k1 _VV##1))))
(constraint (forall ((_VV##2 Int)(x Int)(v Int)) (=> (and ($k2 v) (= _VV##2 (+ x 1))) ($k1 _VV##2))))
(constraint (forall ((_VV##3 Int)) (=> ($k1 _VV##3) ($k2 _VV##3))))
(constraint (forall ((_VV##4 Int)) (=> ($k2 _VV##4) (= 0 _VV##4))))

